# GwaBoard

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.ai-workflow-config/: project.json
.github/workflows/: ci.yml  release.yml
.pipeline/: context.json  diff-cache.txt
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: AndroidAppConventions.kt  AndroidLibraryConventions.kt  GwaBoardExtensions.kt  NdkJniConventions.kt
companion/: build.gradle.kts  proguard-rules.pro
companion/src/main/: AndroidManifest.xml
companion/src/main/kotlin/dev/gwaboard/companion/: CompanionActivity.kt  CompanionApplication.kt
companion/src/main/kotlin/dev/gwaboard/companion/db/: ProfileDatabase.kt
companion/src/main/kotlin/dev/gwaboard/companion/privacy/: DataDeletionManager.kt
companion/src/main/kotlin/dev/gwaboard/companion/profile/: LanguageDetector.kt  ProfileBuilder.kt  ToneAnalyzer.kt
companion/src/main/kotlin/dev/gwaboard/companion/provider/: ProfileStore.kt  SmsContentProvider.kt
companion/src/main/kotlin/dev/gwaboard/companion/sms/: SmsRepository.kt
companion/src/main/res/values/: strings.xml  themes.xml
companion/src/test/kotlin/dev/gwaboard/companion/privacy/: DataDeletionManagerTest.kt
companion/src/test/kotlin/dev/gwaboard/companion/profile/: LanguageDetectorTest.kt  ProfileBuilderTest.kt  ToneAnalyzerTest.kt
companion/src/test/kotlin/dev/gwaboard/companion/provider/: ProfileStoreTest.kt
gradle/: libs.versions.toml
keyboard/: build.gradle.kts  proguard-rules.pro
keyboard/src/androidTest/kotlin/dev/gwaboard/keyboard/ipc/: IpcCommunicationTest.kt
keyboard/src/main/: AndroidManifest.xml
keyboard/src/main/cpp/: CMakeLists.txt  llama_jni_bridge.cpp
keyboard/src/main/cpp/llama.cpp/: VENDOR.md
keyboard/src/main/kotlin/dev/gwaboard/keyboard/: GwaBoardImeService.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/di/: KeyboardModule.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/engine/: HybridSuggestionEngine.kt  NGramEngine.kt  NGramModel.kt  NGramStorage.kt  SmolLMEngine.kt  SuggestionEngine.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/ipc/: SmsContextProvider.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/llm/: LlamaCppBridge.kt  SmolLMEngineImpl.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/privacy/: DataDeletionReceiver.kt  PrivacyPreferences.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/security/: SensitiveFieldDetector.kt
keyboard/src/main/kotlin/dev/gwaboard/keyboard/ui/: PlaceholderKeyboardView.kt  PrivacyDashboardScreen.kt  SuggestionBar.kt  SuggestionBarState.kt  SuggestionBarViewModel.kt
keyboard/src/main/res/layout/: keyboard_view.xml
keyboard/src/main/res/values/: strings.xml
keyboard/src/main/res/xml/: method.xml
keyboard/src/test/kotlin/dev/gwaboard/keyboard/: GwaBoardImeServiceTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/engine/: HybridSuggestionEngineTest.kt  NGramEngineTest.kt  NGramModelTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/ipc/: SmsContextProviderTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/llm/: LlamaCppBridgeTest.kt  SmolLMEngineImplTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/privacy/: DataDeletionReceiverTest.kt  PrivacyPreferencesTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/security/: SensitiveFieldDetectorTest.kt
keyboard/src/test/kotlin/dev/gwaboard/keyboard/ui/: SuggestionBarStateTest.kt  SuggestionBarViewModelTest.kt
metadata/dev.gwaboard.companion/: build.yml
metadata/dev.gwaboard.companion/en-US/: full_description.txt  short_description.txt
metadata/dev.gwaboard.keyboard/: build.yml
metadata/dev.gwaboard.keyboard/en-US/: full_description.txt  short_description.txt
shared-crypto/: build.gradle.kts  consumer-rules.pro
shared-crypto/src/main/: AndroidManifest.xml
shared-crypto/src/main/kotlin/dev/gwaboard/shared/crypto/: EncryptedPayload.kt  KeystoreHelper.kt  SessionCipher.kt
shared-ipc/: build.gradle.kts  consumer-rules.pro
shared-ipc/src/main/kotlin/dev/gwaboard/shared/ipc/: SignatureVerifier.kt  SmsProviderClient.kt  SmsProviderContract.kt
shared-models/: build.gradle.kts
shared-models/src/main/kotlin/dev/gwaboard/shared/models/: ContactInfo.kt  ContactProfile.kt  IpcContract.kt  (+2 more)
(+7 files in other folders)
